inventory_analysis.ipynb

--- a/Project1_Inventory/01_Basic_Inventory_Queries.ipynb
+++ b/Project1_Inventory/01_Basic_Inventory_Queries.ipynb
@@ -50,20 +50,21 @@
                 "language": "sql"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Commands completed successfully."
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.007"
-    },
-    "metadata": {}
-}
-],
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.007"
+                    },
+                    "metadata": {}
+                }
+            ],
             "execution_count": 1
         },
         {
@@ -76,55 +77,60 @@
                 "azdata_cell_guid": "3b46cdf8-c73f-4ea4-839d-32a07fe26e93"
             },
             "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(3 rows affected)"
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "(3 rows affected)"
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.003"
+    },
+    "metadata": {}
+}, {
+    "output_type": "execute_result",
+    "metadata": {},
+    "execution_count": 2,
+    "data": {
+        "application/vnd.dataresource+json": {
+            "schema": {
+                "fields": [
+                    {
+                        "name": "CategoryID"
                     },
-                    "metadata": {}
+                    {
+                        "name": "CategoryName"
+                    }
+                ]
+            },
+            "data": [
+                {
+                    "CategoryID": "1",
+                    "CategoryName": "Electronics"
                 },
                 {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.003"
-                    },
-                    "metadata": {}
+                    "CategoryID": "2",
+                    "CategoryName": "Groceries"
                 },
                 {
-                    "output_type": "execute_result",
-                    "execution_count": 2,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "CategoryID"
-                                    },
-                                    {
-                                        "name": "CategoryName"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "CategoryID": "1",
-                                    "CategoryName": "Electronics"
-                                },
-                                {
-                                    "CategoryID": "2",
-                                    "CategoryName": "Groceries"
-                                },
-                                {
-                                    "CategoryID": "3",
-                                    "CategoryName": "Stationery"
-                                }
-                            ]
-                        },
-                        "text/html": "<table><tr><th>CategoryID</th><th>CategoryName</th></tr><tr><td>1</td><td>Electronics</td></tr><tr><td>2</td><td>Groceries</td></tr><tr><td>3</td><td>Stationery</td></tr></table>"
-                    },
-                    "metadata": {}
+                    "CategoryID": "3",
+                    "CategoryName": "Stationery"
                 }
-            ],
+            ]
+        },
+        "text/html": [
+            "<table>",
+            "<tr><th>CategoryID</th><th>CategoryName</th></tr>",
+            "<tr><td>1</td><td>Electronics</td></tr>",
+            "<tr><td>2</td><td>Groceries</td></tr>",
+            "<tr><td>3</td><td>Stationery</td></tr>",
+            "</table>"
+        ]
+    }
+}
+],
             "execution_count": 2
         },
         {
