--- a/Python_SQL_Practice/Python_Starting.ipynb
+++ b/Python_SQL_Practice/Python_Starting.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "🔰 Lesson 1: Python Print Statement aur Comments"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "azdata_cell_guid": "9916df87-8ca8-43e4-af78-dec3d4ed20bb",
