--- a/Python_SQL_Practice/Python_Starting.ipynb
+++ b/Python_SQL_Practice/Python_Starting.ipynb
@@ -1,17 +1,60 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "🔰 Lesson 1: Python Print Statement aur Comments"
+    " # 🔰 Lesson 1: Python Print Statement aur Comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python print() Function   Use to display output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 1: Basic Syntax and Print\n",
+    "\n",
+    "## 📘 Syntax Rules:\n",
+    "- No semicolon needed\n",
+    "- Indentation matters\n",
+    "- Use `print()` to display output\n",
+    "\n",
+    "## 🧪 Examples:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code Cell 1: Hello World**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assalam Alaykum\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Assalam Alaykum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "azdata_cell_guid": "9916df87-8ca8-43e4-af78-dec3d4ed20bb",
     "language": "python"
@@ -31,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "azdata_cell_guid": "3a4b5287-5431-47b8-bd2f-4d8a3bdc91f4",
     "language": "python"
@@ -43,7 +86,7 @@
        "'Hello my name is moin '"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,36 +96,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***🔹 Code Cell 2: Multiple Lines***"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "azdata_cell_guid": "1806a84a-22d6-4854-aeee-086c53258100",
-    "language": "python"
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Ahmed\n",
-      "Age: 27\n",
-      "Salary: 12000.5\n",
-      "Married: False\n"
+      "Learning Python is easy.\n",
+      "What is your name?\n"
      ]
     }
    ],
    "source": [
-    "# Mera Variable Practice\r\n",
-    "my_name = \"Ahmed\"\r\n",
-    "my_age = 27\r\n",
-    "my_salary = 12000.50\r\n",
-    "is_married = False\r\n",
-    "\r\n",
-    "print(\"Name:\", my_name)\r\n",
-    "print(\"Age:\", my_age)\r\n",
-    "print(\"Salary:\", my_salary)\r\n",
-    "print(\"Married:\", is_married)\r\n"
+    "print(\"Learning Python is easy.\")\n",
+    "print(\"What is your name?\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔹 Code Cell 3: Escape Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yeh \"Python\" ka lesson hai.\n",
+      "Line1\n",
+      "Line2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Yeh \\\"Python\\\" ka lesson hai.\")\n",
+    "print(\"Line1\\nLine2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "She said: \"Hello!\"\n",
+      "It's a beautiful day!\n",
+      "Line1\n",
+      "Line2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"She said: \\\"Hello!\\\"\")\n",
+    "print('It\\'s a beautiful day!')\n",
+    "print(\"Line1\\nLine2\")       # \\n = new line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "azdata_cell_guid": "1806a84a-22d6-4854-aeee-086c53258100",
+    "language": "python"
+   },
+   "source": [
+    "married)\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variable Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_name = \"Ahmed\"\n",
+    "my_age = 27\n",
+    "my_salary = 12000.50\n",
+    "is_married = False\n",
+    "\n",
+    "print(\"Name:\", my_name)\n",
+    "print(\"Age:\", my_age)\n",
+    "print(\"Salary:\", my_salary)\n",
+    "print(\"Married:\", is_married)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
