Python Basic Notebook

--- a/Python_SQL_Practice/Python_Basic_23-5-24.ipynb
+++ b/Python_SQL_Practice/Python_Basic_23-5-24.ipynb
@@ -18,15 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "81ed45d4-331b-4d36-8c99-11cb292e67c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "بسم الله الرحمن الرحيم\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"بسم الله الرحمن الرحيم\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "53bb0481",
    "metadata": {},
    "outputs": [
