--- a/Python_SQL_Practice/Python_Starting.ipynb
+++ b/Python_SQL_Practice/Python_Starting.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔹 Code Cell 3: Escape Characters"
+    "### 🔹 Code Cell 3: Escape Characters"
    ]
   },
   {
@@ -184,32 +184,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variable Practice"
+    "# Lesson 2: Variables & Data Types in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔹 1. What is a Variable? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ###  🍁Variables are containers for storing data values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 🔸 Code Cell 1: Basic Variable Examples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_name = \"Ahmed\"\n",
-    "my_age = 27\n",
-    "my_salary = 12000.50\n",
-    "is_married = False\n",
+    "name = 'Ahemad'\n",
+    "age = 35\n",
+    "height = 5.8\n",
+    "is_student = True \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔸 Code Cell 2: Print various variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Ahemad\n",
+      "Age: 35\n",
+      "Height 5.8\n",
+      "Student True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Name:',name)\n",
+    "print('Age:', age)\n",
+    "print('Height',height)\n",
+    "print('Student', is_student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Syed Moin\n",
+      "Age: 45\n",
+      "Salary: 120000.5\n",
+      "Married: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_name = \"Syed Moin\"\n",
+    "my_age = 45\n",
+    "my_salary = 120000.50\n",
+    "is_married = True\n",
     "\n",
     "print(\"Name:\", my_name)\n",
     "print(\"Age:\", my_age)\n",
     "print(\"Salary:\", my_salary)\n",
     "print(\"Married:\", is_married)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
